--- a/adtc.css
+++ b/adtc.css
@@ -24,6 +24,10 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
+            a{
+                text-decoration: none;
+                color: black;
+            }
         }
 
     
